# tt-mlir

./: .bazelrc  .clang-format  .clang-format-ignore  .clang-tidy  .claude-launch.sh  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BATCH_PARALLEL_GATHER_PLAN.md  BOUNTY-4871-SOLUTION.md  BOUNTY-4872-SOLUTION.md  BOUNTY-4882-SOLUTION.md  BOUNTY-4888-SOLUTION.md  CHISEL_OP_TESTING_GUIDE.md  CHISEL_REFACTORING_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECOMPOSITION_MIGRATION_PLAN.md  DECOMPOSITION_WORKAROUND_TEST_TRACKING.md  FIX_NOTE.md  GENESIS_PATCH.patch  GENESIS_PATCH.py  GENESIS_PATCH_fix-compare-ops-4866.patch  GENESIS_PATCH_fix-iota-opt-4880.patch  GENESIS_PATCH_fix-tensor-creation-4868.patch  IMPLEMENTATION_SUMMARY.md  INSTRUCTION.md  IR_DUMPING.md  LICENSE  Makefile  NANOBIND_FIX_COMPLETE.md  NANOBIND_FIX_UPDATED.md  PERF_CALCULATION_ANALYSIS.md  PERF_DATA_SUMMARY.md  PROBLEM.md  (+155 more)
add/: CMakeLists.txt  ttnn-precompiled.hpp  ttnn-standalone.cpp
cmake/modules/: BuildFlatbuffers.cmake  CMakeLists.txt  ConfigureDoxygen.cmake  ConfigureSphinx.cmake  FBSGenOutputs.cmake  FindMLIR.cmake  GenerateLLKHeaders.cmake  GenerateRawStringHeader.cmake  GenerateXXDHeader.cmake  LintTools.cmake  TTMLIRBuildTypes.cmake  TTMLIRConfig.cmake.in  TTMLIRInstall.cmake  TTMLIRPythonSitePackages.cmake  TTMLIRVersion.cmake
docs/: CMakeLists.txt  D2MToTTNN-spatial-op-tasks.md  Makefile  README.md  auto_downcast_attrs.md  autogen-summary.py  bev_block_a_conv2d_l1_sharding_fix.md  book.toml  distributed_rms_norm_opt2_migration.md  doxygen.cfg.in  graph-telemetry-plan.md  lit-ttrt-testing.md  requirements-docs.txt  requirements.txt  ttir_rank_normalization_scoping_changes.md
docs/design/: d2m-split-unified-thread-redesign.md
docs/proposals/: optimizer-refactoring-proposal.md
docs/source/: apis.rst  conf.py  index.rst  ops.rst
docs/sphinx/: conf.py  index.rst
docs/src/: SUMMARY.md  adding-an-op.md  additional-reading.md  build.md  ci.md  code-of-conduct.md  coding-guidelines.md  conf.py  d2m-jit.md  d2m-pipeline.md  decomposing-an-op-in-ttir.md  dialects-overview.md  docker-notes.md  docs.md  doxygen.md  emitc-testing.md  emitpy.md  flatbuffers.md  getting-started.md  guidelines.md  index.md  internal-build.md  lit-testing.md  llvm_dependency_update.md  macos-ubuntu-vm.md  op-by-op-workflows.md  op-rules-fpn-non-sharded-analysis.md  op-rules-hs-slice-spill-fix.md  optimizer.md  overview.md  project-structure.md  pykernel.md  python-bindings.md  sample_ops_perf_results_row.md  testing.md  tools.md  tt-alchemist.md  tt-explorer-api.md  tt-explorer-cli.md  tt-explorer-roadmap.md  (+18 more)
docs/supplemental/: On Commuting Elementwise Multiply with Matmul in TTIR - Mihailo Djordjevic - Gaus edukativni centar.tex
docs/theme/: highlight.js
docs/vovnet-bounty/: CMakeLists.txt  common.hpp  consteval.cpp  inputs.cpp  main.cpp  model_ttnn.cpp  run  ttnn-precompiled.hpp  ttnn-standalone-baseline.cpp  ttnn-standalone.cpp  utils.cpp  workarounds.hpp
include/ttmlir/: AffineMapAnalysis.h  AffineMapUtils.h  Asserts.h  CMakeLists.txt  FunctionTypes.h  InitPasses.h  LoopUtils.h  Makefile  RegisterAll.h  TTDialect.h  TTDialect.td  TTOps.h  TTOps.td  TTOpsEnums.td  TTOpsTypes.h  TTOpsTypes.td  TTPasses.h  TTPasses.td  TTTypes.h  TTTypes.td  Utils.h  Version.h  cmake_install.cmake
lib/: BUILD  CMakeLists.txt  Makefile  RegisterAll.cpp  cmake_install.cmake  mnist_cane.mlir
lib/CAPI/: BUILD  CMakeLists.txt  D2MTypes.cpp  Dialects.cpp  Makefile  TTAttrs.cpp  TTCoreAttrs.cpp  TTIRAttrs.cpp  TTIRTypes.cpp  TTKernelTypes.cpp  TTNNAttrs.cpp  TTTypes.cpp  cmake_install.cmake
lib/Conversion/: BUILD  CMakeLists.txt  Makefile  PassDetail.h  cmake_install.cmake
lib/Dialect/: BUILD  CMakeLists.txt  Makefile  cmake_install.cmake
lib/Interfaces/: CMakeLists.txt  TTNNOpsBackendInterfaces.cpp
lib/OpModel/: CMakeLists.txt
lib/Runtime/: CMakeLists.txt
lib/Scheduler/: CMakeLists.txt  Makefile  Scheduler.cpp  cmake_install.cmake
lib/SharedLib/: CMakeLists.txt
lib/Support/: CMakeLists.txt  POCInstrumentation.cpp  TTGraphTelemetryInstrumentation.cpp  TTPrintIRInstrumentation.cpp
lib/Telemetry/: CMakeLists.txt  IRSerializer.cpp  TelemetryVisitor.cpp  TelemetryWriter.cpp
lib/Transforms/: CMakeLists.txt  CollapseParallelLoops.cpp  ConstEvalHoist.cpp  ConvertCPUHoistedFunctionsToDPS.cpp  DisableDPSForHoistedFuncs.cpp  EmbedCudaTargetAttributes.cpp  EnableDPSForHoistedFuncs.cpp  ExtractGPUModules.cpp  ReenableDPSWorkaround.cpp  ReenableLostDPS.cpp  RemoveReturnValues.cpp  TagConstEvalOps.cpp  WrapAffineFor.cpp
lib/ttmlir/: CMakeLists.txt  TTDialect.cpp  TTOps.cpp  TTOpsTypes.cpp  TTPasses.cpp  TTTypes.cpp
poc/: CMakeLists.txt  GUIDE.md  README.md  plan.md
poc/fw/: Makefile  cpu2.ll  cpu2_blob.elf  cpu2_blob.ld  cpu2_dispatch.c  cpu2_rt.c  fw.ld  fw_start.S  fw_step1.c  fw_step2.c  fw_step4.c  fw_step5.c  fw_step6.elf
poc/host/: common.cpp  common.hpp  step1_boot.cpp  step2_task.cpp  step3_ttnn_x280.cpp  step4_inplace.cpp  step5_hoisted.cpp  step6_multi_kernel.cpp
python/: Binary.cpp  CMakeLists.txt  D2MModule.cpp  DebugModule.cpp  OptimizerOverrides.cpp  Overrides.cpp  PassTracker.cpp  Passes.cpp  SdyModule.cpp  TTIRModule.cpp  TTKernelModule.cpp  TTMLIRModule.cpp  TTMLIRModule.h  TTModule.cpp  TTNNModule.cpp  Util.cpp  module.mk  pyproject.toml  requirements.txt  requirementsDarwin.txt  resnet18.py  resnet50.py  setup.py  simple_linear.py  test_mlir.py  ttmlir.py
python/common/: _flatbuffer_worker.py  _system_desc_worker.py  (+3 more)
runtime/: CMakeLists.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt  Makefile  cmake_install.cmake  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in  u
tools/: CMakeLists.txt  __init__.py  test_optimizer_overrides.py  verify_perf_report.py
ttnn-standalone/: CMakeLists.txt  README.md  pch.hpp  ttnn-standalone.cpp
ttnn_supplemental/: CMakeLists.txt  __init__.py  ops.cpp  ops.hpp  pybind_ops.cpp  pybind_supplemental.cpp  supplemental.cpp  supplemental.hpp  test.py  ttnn_supplemental.py
(+9327 files in other folders)
